--- a/demo/index.html
+++ b/demo/index.html
@@ -2,17 +2,17 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>Snake HTML5</title>
+		<title>🐍🐍🐍</title>
     <script type="text/javascript" src="../dist/index.js"></script>
     <link rel="stylesheet" href="./style.css">
 	</head>
 	<body>
     <aside class="links">
-      <a href="https://github.com/pellul/snake" target="_blank" rel="noopener noreferrer">See on Github</a>
+      <a href="https://github.com/pellul/snake" target="_blank">See on Github</a>
     </aside>
     <section class="container">
       <article>
-        <h1>The Snake</h1>
+        <h1>🐍The Snake🐍</h1>
         <p>Press an arrow key to start the game!</p>
         <div class="gameboy">
           <div class="screen">
